# whatis

./: Cargo.toml  README.md
src/: main.rs
src/whatis/: file_type.rs  mod.rs
src/whatis/extractors/: example.rs  generic_image.rs  jpeg.rs  mod.rs  png.rs
src/whatis/matchers/: example.rs  infer.rs  mod.rs  noop.rs
