[package]
name = "whatis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infer = "0.5.0"
structopt = { version = "0.3", default-features = false }
anyhow = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
image = "0.23"
img-parts = "0.2"
kamadak-exif = "0.5"
colored = "2"
